# RAG

./: .dockerignore  .env  .env.example  .gitignore  DEPLOYMENT_GUIDE.md  Dockerfile  QUICK_START_CLOUD.md  README.md  RENDER_DEPLOYMENT.md  SETUP_GUIDE.md  SSL_FIX_GUIDE.md  STREAMLIT_SSL_WORKAROUND.md  deploy_railway.md  deploy_streamlit_cloud.md  deployment_check.py  diagnose_api.py  docker-compose.yml  document_streamlit_app.py  main.py  pyproject.toml  render.yaml  requirements.txt  run_app.ps1  setup_vector_search.py  start_render.py  test_mongo_connection.py
.devcontainer/: devcontainer.json
MCP/: __init__.py
MCP/tools/: __init__.py  document_tools.py
api/: index.py
database/: cloud_connection.py  connection.py
database/models/: document_chunk_model.py
sample_documents/: api_documentation.md  meeting_minutes.md  remote_work_policy.md
scripts/: create_sample_documents.py
services/: alternative_embedding_service.py  document_mongodb_service.py  document_processing_service.py  embedding_service.py
